# pmon

./: CMakeLists.txt  LICENSE  Makefile  README.md  xd.txt
.github/workflows/: pmon-tests.yml
include/: fd_table.h  parser.h  pr_tree.h  syscall_handler.h
src/: .monitor.c.swp  fd_table.c  input.c  monitor.c  parser.c  pr_tree.c  syscall_handler.c
test/: .test_input.c.swp  test_fd_table.c  test_input.c  test_parser.c  test_pr_tree.c  test_syscall_handler.c
test/programs/: .test_nested_forks.c.swp  test_nested_forks.c
